--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-1-html-css-forms/style.css
@@ -31,7 +31,7 @@ textarea {
   margin-right: 100%;
 }
 
-.submit-btn {
+.support-btn {
   margin: 10px;
   border-radius: 10px;
   padding: 10px 20px;
